cluster/media/emby/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emby
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    # nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
spec:
  rules:
  - host: "emby.kube.luander.net"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          serviceName: emby
          servicePort: 80
